Changed Some Colors and Imagens

--- a/src/code/html/book_profile.html
+++ b/src/code/html/book_profile.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Scaffold responsive website template</title>
+  <title>Orbis: Perfil do Livro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -24,13 +24,6 @@
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-
-  <!-- =======================================================
-    Theme Name: Scaffold
-    Theme URL: https://bootstrapmade.com/scaffold-bootstrap-metro-style-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
 </head>
 
 <body data-spy="scroll" data-target=".bs-docs-sidebar">
@@ -51,14 +44,14 @@
           <div>
             <nav>
               <ul class="nav topnav">
-                <li class="dropdown first">
+                <li class="dropdown pink">
                   <a href="index.html"><i class="icon-home icon-white"></i> Home</a>
                   <ul class="dropdown-menu">
                     <li><a href="index_alt1.html">Index alt 1</a></li>
                     <li><a href="index_alt2.html">Index alt 2</a></li>
                   </ul>
                 </li>
-                <li class="dropdown primary active">
+                <li class="dropdown purple">
                   <a href="#"><i class="icon-star icon-white"></i> Features</a>
                   <ul class="dropdown-menu">
                     <li><a href="overview.html">Overview</a></li>
@@ -75,7 +68,7 @@
                     </li>
                   </ul>
                 </li>
-                <li class="dropdown danger">
+                <li class="dropdown turquoise">
                   <a href="#"><i class="icon-leaf icon-white"></i> Pages</a>
                   <ul class="dropdown-menu">
                     <li><a href="about.html">About us</a></li>
@@ -86,7 +79,7 @@
                     <li><a href="404.html">404</a></li>
                   </ul>
                 </li>
-                <li class="dropdown warning">
+                <li class="dropdown green">
                   <a href="#"><i class="icon-camera icon-white"></i> Portfolio</a>
                   <ul class="dropdown-menu">
                     <li class="dropdown"><a href="#">Portfolio type 1</a>
@@ -96,7 +89,7 @@
                         <li><a href="portfolio-alt1-4cols.html">4 columns</a></li>
                       </ul>
                     </li>
-                    <li class="dropdown"><a href="#">Portfolio type 2</a>
+                    <li class="dropdown yellow"><a href="#">Portfolio type 2</a>
                       <ul class="dropdown-menu sub-menu">
                         <li><a href="portfolio-alt2-2cols.html">2 columns</a></li>
                         <li><a href="portfolio-alt2-3cols.html">3 columns</a></li>
@@ -107,7 +100,7 @@
                     <li><a href="portfolio-detail.html">Portfolio detail</a></li>
                   </ul>
                 </li>
-                <li class="dropdown info">
+                <li class="dropdown yellow">
                   <a href="#"><i class="icon-bullhorn icon-white"></i> Blog</a>
                   <ul class="dropdown-menu">
                     <li><a href="blog_left_sidebar.html">Blog left sidebar</a></li>
@@ -116,7 +109,7 @@
                     <li><a href="post_right_sidebar.html">Post right sidebar</a></li>
                   </ul>
                 </li>
-                <li class="inverse">
+                <li class="orange">
                   <a href="contact.html"><i class="icon-envelope icon-white"></i> Contact</a>
                 </li>
               </ul>
@@ -136,8 +129,7 @@
       <div class="container">
         <div class="row">
           <div class="span8">
-            <h3><i class="m-icon-big-swapright m-icon-white"></i> Overview</h3>
-            <p>Overview of the template, its contents, and how to get started with scaffold template.</p>
+            <h3><i class="m-icon-big-swapright m-icon-white"></i> Procure Seu Novo Livro Favorito!</h3>
           </div>
           <div class="span4">
             <div class="input-append">
@@ -159,12 +151,13 @@
     ================================================== -->
     <div class="row">
       <div class="span3 bs-docs-sidebar">
+        <img src="../../img/book_covers/volta_ao_mundo_em_80_dias.jpg" class="img-fluid" alt="Responsive image">
         <ul class="nav nav-list bs-docs-sidenav">
-          <li><a href="#general-template"><i class="icon-chevron-right"></i> General</a></li>
-          <li><a href="#file-structure"><i class="icon-chevron-right"></i> File structure</a></li>
-          <li><a href="#contents"><i class="icon-chevron-right"></i> What's included</a></li>
-          <li><a href="#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
-          <li><a href="#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
+          <li class="pink"><a href="#general-template"><i class="icon-chevron-right"></i> General</a></li>
+          <li class="purple"><a href="#file-structure"><i class="icon-chevron-right"></i> File structure</a></li>
+          <li class="turquoise"><a href="#contents"><i class="icon-chevron-right"></i> What's included</a></li>
+          <li class="yellow"><a href="#html-template"><i class="icon-chevron-right"></i> HTML template</a></li>
+          <li class="orange"><a href="#what-next"><i class="icon-chevron-right"></i> What next?</a></li>
         </ul>
       </div>
       <div class="span9">
@@ -175,12 +168,11 @@
         ================================================== -->
         <section id="general-template" class="doc">
           <div class="page-header first">
-            <h3>1. General</h3>
+            <h2><b>Volta ao Mundo Em 80 Dias por Julio Verne<b></h2>
           </div>
-          <p>Scaffold is a responsive HTML CSS site template based from twitter bootstrap and designed for multi purpose usage such as corporate business, web agency to showcase their works, marketing or product website to personal site. We believe that
-            Multitrap has complete elements and features to build a really great website. You can read some interesting pages showcasing all Multitrap features based from twitter bootstrap framework on several pages like scaffolding, base-css, components
-            and javascript.
+          <p>Phileas Fogg, um inglês pacato, calmo, metódico e solitário, cumpria todos os dias a mesma rotina. Misterioso, nunca compartilhava sua intimidade com ninguém. Mas tudo mudou quando apostou com alguns sócios do clube metade de sua fortuna, afirmando que daria a volta ao mundo em 80 dias! Era o ano de 1872, e ele e seu novo criado, Passepartout, embarcaram em uma aventura que nenhum dos dois imaginava como seria o seu fim!
           </p>
+          <button type="button" class="btn btn-primary">Primary</button>
         </section>
 
 
