--- a/src/code/html/index.html
+++ b/src/code/html/index.html
@@ -9,22 +9,22 @@
   <meta name="author" content="">
 
   <!-- styles -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="assets/css/docs.css" rel="stylesheet">
-  <link href="assets/css/prettyPhoto.css" rel="stylesheet">
-  <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
-  <link href="assets/css/camera.css" rel="stylesheet">
+  <link href="../assets/css/bootstrap.css" rel="stylesheet">
+  <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="../assets/css/docs.css" rel="stylesheet">
+  <link href="../assets/css/prettyPhoto.css" rel="stylesheet">
+  <link href="../assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+  <link href="../assets/css/camera.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300|Open+Sans:400,300,300italic,400italic" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/color/success.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
+  <link href="../assets/color/success.css" rel="stylesheet">
 
   <!-- fav and touch icons -->
-  <link rel="shortcut icon" href="assets/ico/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+  <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
 
   <!-- =======================================================
     Theme Name: Scaffold
@@ -44,7 +44,7 @@
         <div class="container">
           <!-- logo -->
           <a class="brand logo" href="index.html">
-            <img src="assets/img/logo.png" alt="" />
+            <img src="../assets/img/logo.png" alt="" />
           </a>
           <!-- end logo -->
 
@@ -136,7 +136,7 @@
         <div class="row">
           <div class="span12">
             <div class="camera_wrap camera_black_skin" id="camera_wrap_2">
-              <div data-thumb="assets/img/slides/camera/img1.jpg" data-src="assets/img/slides/camera/img1.jpg">
+              <div data-thumb="../assets/img/slides/camera/img1.jpg" data-src="../assets/img/slides/camera/img1.jpg">
                 <div class="camera_caption fadeFromBottom">
                   <h2>Twitter bootstrap</h2>
                   <div class="hidden-phone">
@@ -146,7 +146,7 @@
                   </div>
                 </div>
               </div>
-              <div data-thumb="assets/img/slides/camera/img2.jpg" data-src="assets/img/slides/camera/img2.jpg">
+              <div data-thumb="../assets/img/slides/camera/img2.jpg" data-src="../assets/img/slides/camera/img2.jpg">
                 <div class="camera_caption fadeFromBottom">
                   <h2>Responsive layout</h2>
                   <div class="hidden-phone">
@@ -156,7 +156,7 @@
                   </div>
                 </div>
               </div>
-              <div data-thumb="assets/img/slides/camera/img3.jpg" data-src="assets/img/slides/camera/img3.jpg">
+              <div data-thumb="../assets/img/slides/camera/img3.jpg" data-src="../assets/img/slides/camera/img3.jpg">
                 <div class="camera_caption fadeFromBottom">
                   <h2>Metro style</h2>
                   <div class="hidden-phone">
@@ -166,7 +166,7 @@
                   </div>
                 </div>
               </div>
-              <div data-thumb="assets/img/slides/camera/img4.jpg" data-src="assets/img/slides/camera/img4.jpg">
+              <div data-thumb="../assets/img/slides/camera/img4.jpg" data-src="../assets/img/slides/camera/img4.jpg">
                 <div class="camera_caption fadeFromBottom">
                   <h2>Lot of features</h2>
                   <div class="hidden-phone">
@@ -231,7 +231,7 @@
         </div>
         <div class="span3">
           <div class="well well-primary box">
-            <img src="assets/img/icons/box-1-white.png" alt="" />
+            <img src="../assets/img/icons/box-1-white.png" alt="" />
             <h3>Responsive bootstrap</h3>
             <p>
               Dolorem adipiscing definiebas ut nec. Dolore consectetuer eu vim, elit molestie ei has, petentium imperdiet in pri. Mel virtute efficiantur ne zril.
@@ -241,7 +241,7 @@
         </div>
         <div class="span3">
           <div class="well well-success box">
-            <img src="assets/img/icons/box-2-white.png" alt="" />
+            <img src="../assets/img/icons/box-2-white.png" alt="" />
             <h3>With metro taste</h3>
             <p>
               Ad sit option intellegat, unum populo comprehensam ut sed. Copiosae corrumpit qui ex, duo nullam feugait qualisque at an dicit saperet.
@@ -251,7 +251,7 @@
         </div>
         <div class="span3">
           <div class="well well-warning box">
-            <img src="assets/img/icons/box-3-white.png" alt="" />
+            <img src="../assets/img/icons/box-3-white.png" alt="" />
             <h3>Well documented</h3>
             <p>
               Ne vix clita integre expetenda, eos cetero numquam no, in sea omnes detracto. Ne iriure habemus maiestatis mei. Postea euripidis contentiones.
@@ -288,10 +288,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work1.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work1.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -303,10 +303,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work2.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work2.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -317,10 +317,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work3.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work3.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -331,10 +331,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work4.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work4.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -345,10 +345,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work5.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work5.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -359,10 +359,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work6.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work6.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -373,10 +373,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work7.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work7.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -387,10 +387,10 @@
                 <li>
                   <div class="thumbnail">
                     <div class="image-wrapp">
-                      <img src="assets/img/dummies/work8.jpg" alt="Portfolio name" title="" />
+                      <img src="../assets/img/dummies/work8.jpg" alt="Portfolio name" title="" />
                       <article class="da-animate da-slideFromRight" style="display: block;">
-                        <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                        <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                        <a class="link_post" href="portfolio-detail.html"><img src="../assets/img/icons/link_post_icon.png" alt="" /></a>
+                        <span><a class="zoom" data-pretty="prettyPhoto" href="../assets/img/dummies/big1.jpg"><img src="../assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                       </article>
                     </div>
                     <div class="caption">
@@ -493,22 +493,22 @@
     </div>
   </footer>
 
-  <script src="assets/js/jquery-1.8.2.min.js"></script>
-  <script src="assets/js/jquery.easing.1.3.js"></script>
-  <script src="assets/js/google-code-prettify/prettify.js"></script>
-  <script src="assets/js/modernizr.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
-  <script src="assets/js/jquery.elastislide.js"></script>
-  <script src="assets/js/jquery.flexslider.js"></script>
-  <script src="assets/js/jquery.prettyPhoto.js"></script>
-  <script src="assets/js/application.js"></script>
-  <script src="assets/js/hover/jquery-hover-effect.js"></script>
-  <script src="assets/js/hover/setting.js"></script>
-  <script src="assets/js/camera/camera.min.js"></script>
-  <script src="assets/js/camera/setting.js"></script>
+  <script src="../assets/js/jquery-1.8.2.min.js"></script>
+  <script src="../assets/js/jquery.easing.1.3.js"></script>
+  <script src="../assets/js/google-code-prettify/prettify.js"></script>
+  <script src="../assets/js/modernizr.js"></script>
+  <script src="../assets/js/bootstrap.js"></script>
+  <script src="../assets/js/jquery.elastislide.js"></script>
+  <script src="../assets/js/jquery.flexslider.js"></script>
+  <script src="../assets/js/jquery.prettyPhoto.js"></script>
+  <script src="../assets/js/application.js"></script>
+  <script src="../assets/js/hover/jquery-hover-effect.js"></script>
+  <script src="../assets/js/hover/setting.js"></script>
+  <script src="../assets/js/camera/camera.min.js"></script>
+  <script src="../assets/js/camera/setting.js"></script>
 
   <!-- Template Custom JavaScript File -->
-  <script src="assets/js/custom.js"></script>
+  <script src="../assets/js/custom.js"></script>
 
 </body>
 
