--- a/src/code/html/portfolio-alt1-2cols.html
+++ b/src/code/html/portfolio-alt1-2cols.html
@@ -9,21 +9,21 @@
   <meta name="author" content="">
 
   <!-- styles -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="assets/css/docs.css" rel="stylesheet">
-  <link href="assets/css/prettyPhoto.css" rel="stylesheet">
-  <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+  <link href="../asset/css/bootstrap.css" rel="stylesheet">
+  <link href="../asset/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="../asset/css/docs.css" rel="stylesheet">
+  <link href="../asset/css/prettyPhoto.css" rel="stylesheet">
+  <link href="../asset/js/google-code-prettify/prettify.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300|Open+Sans:400,300,300italic,400italic" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/color/success.css" rel="stylesheet">
+  <link href="../asset/css/style.css" rel="stylesheet">
+  <link href="../asset/color/success.css" rel="stylesheet">
 
   <!-- fav and touch icons -->
-  <link rel="shortcut icon" href="assets/ico/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+  <link rel="shortcut icon" href="../asset/ico/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../asset/ico/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../asset/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../asset/ico/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="../asset/ico/apple-touch-icon-57-precomposed.png">
 
   <!-- =======================================================
     Theme Name: Scaffold
@@ -43,7 +43,7 @@
         <div class="container">
           <!-- logo -->
           <a class="brand logo" href="index.html">
-						<img src="assets/img/logo.png" alt="" />
+						<img src="../asset/img/logo.png" alt="" />
 				  </a>
           <!-- end logo -->
 
@@ -185,10 +185,10 @@
             <div class="span6">
               <div class="thumbnail">
                 <div class="image-wrapp">
-                  <img src="assets/img/dummies/work1.jpg" alt="Portfolio name" title="" />
+                  <img src="../asset/img/dummies/work1.jpg" alt="Portfolio name" title="" />
                   <article class="da-animate da-slideFromRight" style="display: block;">
-                    <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                    <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                    <a class="link_post" href="portfolio-detail.html"><img src="../asset/img/icons/link_post_icon.png" alt="" /></a>
+                    <span><a class="zoom" data-pretty="prettyPhoto" href="../asset/img/dummies/big1.jpg"><img src="../asset/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                   </article>
                 </div>
                 <div class="caption">
@@ -203,10 +203,10 @@
             <div class="span6">
               <div class="thumbnail">
                 <div class="image-wrapp">
-                  <img src="assets/img/dummies/work2.jpg" alt="Portfolio name" title="" />
+                  <img src="../asset/img/dummies/work2.jpg" alt="Portfolio name" title="" />
                   <article class="da-animate da-slideFromRight" style="display: block;">
-                    <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                    <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                    <a class="link_post" href="portfolio-detail.html"><img src="../asset/img/icons/link_post_icon.png" alt="" /></a>
+                    <span><a class="zoom" data-pretty="prettyPhoto" href="../asset/img/dummies/big1.jpg"><img src="../asset/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                   </article>
                 </div>
 
@@ -222,10 +222,10 @@
             <div class="span6">
               <div class="thumbnail">
                 <div class="image-wrapp">
-                  <img src="assets/img/dummies/work3.jpg" alt="Portfolio name" title="" />
+                  <img src="../asset/img/dummies/work3.jpg" alt="Portfolio name" title="" />
                   <article class="da-animate da-slideFromRight" style="display: block;">
-                    <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                    <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                    <a class="link_post" href="portfolio-detail.html"><img src="../asset/img/icons/link_post_icon.png" alt="" /></a>
+                    <span><a class="zoom" data-pretty="prettyPhoto" href="../asset/img/dummies/big1.jpg"><img src="../asset/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                   </article>
                 </div>
 
@@ -241,10 +241,10 @@
             <div class="span6">
               <div class="thumbnail">
                 <div class="image-wrapp">
-                  <img src="assets/img/dummies/work4.jpg" alt="Portfolio name" title="" />
+                  <img src="../asset/img/dummies/work4.jpg" alt="Portfolio name" title="" />
                   <article class="da-animate da-slideFromRight" style="display: block;">
-                    <a class="link_post" href="portfolio-detail.html"><img src="assets/img/icons/link_post_icon.png" alt="" /></a>
-                    <span><a class="zoom" data-pretty="prettyPhoto" href="assets/img/dummies/big1.jpg"><img src="assets/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
+                    <a class="link_post" href="portfolio-detail.html"><img src="../asset/img/icons/link_post_icon.png" alt="" /></a>
+                    <span><a class="zoom" data-pretty="prettyPhoto" href="../asset/img/dummies/big1.jpg"><img src="../asset/img/icons/zoom_icon.png" alt="Portfolio name" title="Portfolio name" /></a></span>
                   </article>
                 </div>
 
@@ -364,22 +364,22 @@
     </div>
   </footer>
 
-  <script src="assets/js/jquery-1.8.2.min.js"></script>
-  <script src="assets/js/jquery.easing.1.3.js"></script>
-  <script src="assets/js/google-code-prettify/prettify.js"></script>
-  <script src="assets/js/modernizr.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
-  <script src="assets/js/jquery.elastislide.js"></script>
-  <script src="assets/js/jquery.flexslider.js"></script>
-  <script src="assets/js/application.js"></script>
-  <script src="assets/js/jquery.prettyPhoto.js"></script>
-  <script src="assets/js/portfolio/jquery.quicksand.js"></script>
-  <script src="assets/js/portfolio/setting.js"></script>
-  <script src="assets/js/hover/jquery-hover-effect.js"></script>
-  <script src="assets/js/hover/setting.js"></script>
+  <script src="../asset/js/jquery-1.8.2.min.js"></script>
+  <script src="../asset/js/jquery.easing.1.3.js"></script>
+  <script src="../asset/js/google-code-prettify/prettify.js"></script>
+  <script src="../asset/js/modernizr.js"></script>
+  <script src="../asset/js/bootstrap.js"></script>
+  <script src="../asset/js/jquery.elastislide.js"></script>
+  <script src="../asset/js/jquery.flexslider.js"></script>
+  <script src="../asset/js/application.js"></script>
+  <script src="../asset/js/jquery.prettyPhoto.js"></script>
+  <script src="../asset/js/portfolio/jquery.quicksand.js"></script>
+  <script src="../asset/js/portfolio/setting.js"></script>
+  <script src="../asset/js/hover/jquery-hover-effect.js"></script>
+  <script src="../asset/js/hover/setting.js"></script>
 
   <!-- Template Custom JavaScript File -->
-  <script src="assets/js/custom.js"></script>
+  <script src="../asset/js/custom.js"></script>
 
 </body>
 
