--- a/src/code/html/portfolio-detail.html
+++ b/src/code/html/portfolio-detail.html
@@ -9,20 +9,20 @@
   <meta name="author" content="">
 
   <!-- styles -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="assets/css/docs.css" rel="stylesheet">
-  <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+  <link href="../asset/css/bootstrap.css" rel="stylesheet">
+  <link href="../asset/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="../asset/css/docs.css" rel="stylesheet">
+  <link href="../asset/js/google-code-prettify/prettify.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300|Open+Sans:400,300,300italic,400italic" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/color/success.css" rel="stylesheet">
+  <link href="../asset/css/style.css" rel="stylesheet">
+  <link href="../asset/color/success.css" rel="stylesheet">
 
   <!-- fav and touch icons -->
-  <link rel="shortcut icon" href="assets/ico/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+  <link rel="shortcut icon" href="../asset/ico/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../asset/ico/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../asset/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../asset/ico/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="../asset/ico/apple-touch-icon-57-precomposed.png">
 
   <!-- =======================================================
     Theme Name: Scaffold
@@ -42,7 +42,7 @@
         <div class="container">
           <!-- logo -->
           <a class="brand logo" href="index.html">
-						<img src="assets/img/logo.png" alt="" />
+						<img src="../asset/img/logo.png" alt="" />
 				  </a>
           <!-- end logo -->
 
@@ -157,7 +157,7 @@
           <aside>
             <div class="widget">
               <h4 class="heading-success"><span class="btn btn-large btn-success"><i class="m-icon-big-swapdown m-icon-white"></i></span>&nbsp;&nbsp;Author detail</h4>
-              <img src="assets/img/avatar.png" class="alignleft" alt="" />
+              <img src="../asset/img/avatar.png" class="alignleft" alt="" />
               <h5>John doe</h5>
               <p>
                 Donec ullamcorper nulla non metus auctor fringilla commodo luctus
@@ -184,7 +184,7 @@
             </div>
             <div class="clearfix"></div>
             <div class="well">
-              <a href="#"><img src="assets/img/dummies/big.jpg" alt="" /></a>
+              <a href="#"><img src="../asset/img/dummies/big.jpg" alt="" /></a>
               <h5>Description : </h5>
               <p>
                 Cu cum noster euismod appellantur, mundi vitae vim ut, ea sea scripta expetendis vituperatoribus. Et cibo dicat impetus cum, id his quodsi scripserit. Nec purto habeo recteque eu. Posse oportere accusamus an sit, ex quando phaedrum sapientem ius. Perfecto
@@ -198,7 +198,7 @@
           <ul class="media-list">
             <li class="media">
               <a class="pull-left" href="#">
-							<img class="media-object" src="assets/img/small-avatar.png" alt="" />
+							<img class="media-object" src="../asset/img/small-avatar.png" alt="" />
 						</a>
               <div class="media-body">
                 <h5 class="media-heading"><a href="#">Dean maximus</a></h5>
@@ -208,7 +208,7 @@
                 <!-- Nested media object -->
                 <div class="media">
                   <a class="pull-left" href="#">
-									<img class="media-object" src="assets/img/small-avatar.png" alt="" />
+									<img class="media-object" src="../asset/img/small-avatar.png" alt="" />
 								</a>
                   <div class="media-body">
                     <h5 class="media-heading"><a href="#">Cris Need</a></h5>
@@ -218,7 +218,7 @@
                     <!-- Nested media object -->
                     <div class="media">
                       <a class="pull-left" href="#">
-											<img class="media-object" src="assets/img/small-avatar.png" alt="" />
+											<img class="media-object" src="../asset/img/small-avatar.png" alt="" />
 										</a>
                       <div class="media-body">
                         <h5 class="media-heading"><a href="#">Nooer neyh</a></h5>
@@ -232,7 +232,7 @@
                 <!-- Nested media object -->
                 <div class="media">
                   <a class="pull-left" href="#">
-									<img class="media-object" src="assets/img/small-avatar.png" alt="" />
+									<img class="media-object" src="../asset/img/small-avatar.png" alt="" />
 								</a>
                   <div class="media-body">
                     <h5 class="media-heading"><a href="#">Andinia new</a></h5>
@@ -245,7 +245,7 @@
             </li>
             <li class="media">
               <a class="pull-left" href="#">
-							<img class="media-object" src="assets/img/small-avatar.png" alt="" />
+							<img class="media-object" src="../asset/img/small-avatar.png" alt="" />
 						</a>
               <div class="media-body">
                 <h5 class="media-heading"><a href="#">Maouses chees</a></h5>
@@ -372,21 +372,21 @@
     </div>
   </footer>
 
-  <script src="assets/js/jquery-1.8.2.min.js"></script>
-  <script src="assets/js/jquery.easing.1.3.js"></script>
-  <script src="assets/js/google-code-prettify/prettify.js"></script>
-  <script src="assets/js/modernizr.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
-  <script src="assets/js/jquery.elastislide.js"></script>
-  <script src="assets/js/jquery.prettyPhoto.js"></script>
-  <script src="assets/js/application.js"></script>
-  <script src="assets/js/portfolio/jquery.quicksand.js"></script>
-  <script src="assets/js/portfolio/setting.js"></script>
-  <script src="assets/js/hover/jquery-hover-effect.js"></script>
-  <script src="assets/js/hover/setting.js"></script>
+  <script src="../asset/js/jquery-1.8.2.min.js"></script>
+  <script src="../asset/js/jquery.easing.1.3.js"></script>
+  <script src="../asset/js/google-code-prettify/prettify.js"></script>
+  <script src="../asset/js/modernizr.js"></script>
+  <script src="../asset/js/bootstrap.js"></script>
+  <script src="../asset/js/jquery.elastislide.js"></script>
+  <script src="../asset/js/jquery.prettyPhoto.js"></script>
+  <script src="../asset/js/application.js"></script>
+  <script src="../asset/js/portfolio/jquery.quicksand.js"></script>
+  <script src="../asset/js/portfolio/setting.js"></script>
+  <script src="../asset/js/hover/jquery-hover-effect.js"></script>
+  <script src="../asset/js/hover/setting.js"></script>
 
   <!-- Template Custom JavaScript File -->
-  <script src="assets/js/custom.js"></script>
+  <script src="../asset/js/custom.js"></script>
 
 </body>
 
