--- a/src/code/html/pricingtable.html
+++ b/src/code/html/pricingtable.html
@@ -9,20 +9,20 @@
   <meta name="author" content="">
 
   <!-- styles -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
-  <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-  <link href="assets/css/docs.css" rel="stylesheet">
-  <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
+  <link href="../asset/css/bootstrap.css" rel="stylesheet">
+  <link href="../asset/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="../asset/css/docs.css" rel="stylesheet">
+  <link href="../asset/js/google-code-prettify/prettify.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300|Open+Sans:400,300,300italic,400italic" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/color/success.css" rel="stylesheet">
+  <link href="../asset/css/style.css" rel="stylesheet">
+  <link href="../asset/color/success.css" rel="stylesheet">
 
   <!-- fav and touch icons -->
-  <link rel="shortcut icon" href="assets/ico/favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+  <link rel="shortcut icon" href="../asset/ico/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../asset/ico/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../asset/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../asset/ico/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="../asset/ico/apple-touch-icon-57-precomposed.png">
 
   <!-- =======================================================
     Theme Name: Scaffold
@@ -42,7 +42,7 @@
         <div class="container">
           <!-- logo -->
           <a class="brand logo" href="index.html">
-						<img src="assets/img/logo.png" alt="" />
+						<img src="../asset/img/logo.png" alt="" />
 				  </a>
           <!-- end logo -->
 
@@ -314,17 +314,17 @@
     </div>
   </footer>
 
-  <script src="assets/js/jquery-1.8.2.min.js"></script>
-  <script src="assets/js/jquery.easing.1.3.js"></script>
-  <script src="assets/js/google-code-prettify/prettify.js"></script>
-  <script src="assets/js/modernizr.js"></script>
-  <script src="assets/js/bootstrap.js"></script>
-  <script src="assets/js/jquery.elastislide.js"></script>
-  <script src="assets/js/jquery.prettyPhoto.js"></script>
-  <script src="assets/js/application.js"></script>
+  <script src="../asset/js/jquery-1.8.2.min.js"></script>
+  <script src="../asset/js/jquery.easing.1.3.js"></script>
+  <script src="../asset/js/google-code-prettify/prettify.js"></script>
+  <script src="../asset/js/modernizr.js"></script>
+  <script src="../asset/js/bootstrap.js"></script>
+  <script src="../asset/js/jquery.elastislide.js"></script>
+  <script src="../asset/js/jquery.prettyPhoto.js"></script>
+  <script src="../asset/js/application.js"></script>
 
   <!-- Template Custom JavaScript File -->
-  <script src="assets/js/custom.js"></script>
+  <script src="../asset/js/custom.js"></script>
 
 </body>
 
