Created Categories Page

--- a/src/code/html/menu.html
+++ b/src/code/html/menu.html
@@ -20,7 +20,7 @@
       <div class="navbar-inner">
         <div class="container">
           <!-- logo -->
-          <a class="brand logo" href="index.html">
+          <a class="brand logo" href="index.php">
             <img src="../assets/img/logo.png" alt="" />
           </a>
           <!-- end logo -->
@@ -29,22 +29,22 @@
             <nav>
               <ul class="nav topnav">
                 <li class="dropdown pink">
-                  <a href="index.html"> Livros!</a>
+                  <a href="../php/index.php"> Livros!</a>
                 </li>
                 <li class="dropdown purple">
-                  <a href="#">Categorias!</a>
+                  <a href="../php/categorias.php">Categorias!</a>
                 </li>
                 <li class="dropdown turquoise">
-                  <a href="#">Faixa Etárias!</a>
+                  <a href="../php/categorias.php">Procure!</a>
                 </li>
                 <li class="dropdown green">
-                  <a href="#">Procure!</a>
+                  <a href="login.php">Login!</a>
                 </li>
                 <li class="dropdown yellow">
                   <a href="#">Sobre Nós!</a>
                 </li>
                 <li class="orange">
-                  <a href="../php/cadastro.php">Cadastre Seu Filho!</a>
+                  <a href="../php/cadastro.php">Cadastro!</a>
                 </li>
               </ul>
             </nav>
