--- a/src/code/html/pesquisa.html
+++ b/src/code/html/pesquisa.html
@@ -25,8 +25,8 @@
                 </div>
                 <div class="span4">
                     <div class="input-append">
-                        <form class="form-search">
-                            <input type="text" class="input-medium search-query">
+                        <form class="form-search" action="../php/pesquisa.php" method="get">
+                            <input type="text" name="ISBN" class="input-medium search-query">
                             <button type="submit" class="btn btn-inverse">Procurar!</button>
                         </form>
                     </div>
